public/css/app.css
@import url('https://fonts.googleapis.com/css2?family=Cormorant&family=Karla:wght@200;300;400;600&display=swap');

/* override browser default */
html,
body {
  margin: 0;
  padding: 0;
}

/* include border and padding in element width and height */
* {
  box-sizing: border-box;
}

/* start global styling */
body {
  background-color: rgb(250, 250, 245);
  font-family: 'Karla', sans-serif;
  font-weight: 400;
  color: rgb(25, 25, 25);
}

h1, h2, h3, h4, h5 {
font-family: 'Cormorant', serif;
font-weight: 600;
color: rgb(25, 25, 25);
}

h1 {
  font-size: 3em;
}

a:link, a:visited, a:active, a:hover {
  text-decoration: none;
}

header {
  background-color: white;
  border-bottom: 1px solid #A9A9A9;
  padding: 25px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#logo {
  display: block;
  background-color: black;
  padding: 10px 15px;
  color: white;
  font-weight: 200;
  font-size: 1.8em;
  font-kerning: none;
  letter-spacing: 3px;
  text-transform: uppercase;
  text-shadow: 0px 0px 10px #DCDCDC;
}

#utility {
  display: flex;
  font-weight: 500;
  font-size: 1.2em;
  text-transform: uppercase;
}

main {
  padding: 15px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background-color: white;
  padding: 0px;
  margin: 25px;
}

.card#form {
  width: 35%;
}

.detailCard {
  width: 75%;
  display: grid;
  grid-template-columns: [first] 300px [second] 1fr [third] 125px;
  grid-template-rows: auto;
  justify-content: flex-start;
  align-items: start;
  column-gap: 10px;
  background-color: white;
  margin-bottom: 25px;
}

form, .productInfo {
  width: 100%;
  padding-top: 20px;
  display: grid;
  grid-template-columns: [label] 125px [value] 1fr;
  grid-template-rows: auto;
  justify-content: flex-start;
  align-items: start;
  column-gap: 5px;
  row-gap: 20px;
}

.productInfo {
  padding-bottom: 20px;
}

button, input, select, textarea {
  font-family: inherit;
  font-size: 100%;
}

input[type=text] {
  padding: 10px;
  margin-right: 10px;
}

button {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(178, 194, 178);
  margin: 0;
  padding: 20px 10px;
  border: 0 none;
  width: 100%;
  height: auto;
  font-weight: 500;
  text-transform: uppercase;
  cursor: pointer;
  border-style: hidden;
}

button:hover {
  background-color: gray;
}

#form > form > button {
  grid-column: span 2;
  margin-top: 20px;
}

label, .value {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin-left: 10px;
  width: auto;
  height: 100%;
}

label, .key {
  font-weight: 500;
  text-transform: uppercase;
}

.value {
  font-weight: 300;
}

#gallery {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-wrap: wrap;
  width: 100%;
  height: auto;
  margin: 25px;
}

.productShot {
  display: inline-block;
  position: relative;
  overflow: hidden;
  width: 300px;
  height: 300px;
}

.productShot > img {
  width: auto;
  height: 100%;
}

#sold-out {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: inherit;
  margin: 0;
  padding: 20px 10px;
  border: 0 none;
  width: 100%;
  height: auto;
  font-weight: 500;
  text-transform: uppercase;
}

